feature: developping movies and directors api with validation and error handling
