# routes/index.js
@@ -1,11 +1,11 @@
-const router = require("express").Router();
+const router = require('express').Router();
 
-router.get("/", (req, res) => {
-  //#swagger.tags = ['Hello world']
-  res.send("Hello world");
+router.get('/', (req, res) => {
+  res.send('Welcome to the Movie and Director API!');
 });
 
-router.use("/", require("./swagger"));
-router.use("/contacts", require("./contacts"));
+router.use('/', require('./swagger'));
+router.use('/movies', require('./movies'));
+router.use('/directors', require('./directors'));
 
 module.exports = router;
